2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/islessgreaterd32.c (islessgreater): clean ups implementation
	to use only libdecnumber operations.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* libdecnumber/bid/bid-coeffbits.h (bid_required_bits_32: Fix lookup
	table values.
	(bid_required_bits_64): Use bid_required_bits_32 instead.
	* libdecnumber/bid/decimal128.c (decDigitsToBID): Fix BID encoding.
	* libdecnumber/bid/decimal32.c (decDigitstoBID): Likewise.
	* libdecnumber/bid/decimal64.c (decDigitstoBID): Likewise.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/logbd32.c: Cleanup implementation to use only libdecnumber
	operations.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/test-numdigits.c: Cleanup.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/test-setexp.c: New file: setexpd[32|64|128] testcase.
	* Makefile.in: Add setexp testcase rules.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/test-getexp.c: Add _Decimal32 and _Decimal128 tests and remove
	check for infinity for _Decimal64.

2014-05-15  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* libdecnumber/bid/bid-coeffbits.h: New file: function to calculate
	required bits to express BID coefficient.
	* libdecnumber/bid/decimal128.c (decimal128FromNumber): Add BID
	support.
	(decimal128ToNumber): Likewise.
	(decimal128FromString): Cleanup comments.
	* libdecnumber/bid/decimal32.c (bid_required_coef_bits): Move to
	specific bid-coeffbits.h file.
	(decimal32FromNumber): Cleanup comments.
	(decimal32ToNumber): Likewise.
	* libdecnumber/bid/decimal64.c (bid_required_coef_bits): Move to
	specific bid-coeffbits.h file.
	(decimal64FromNumber): Cleanup comments.
	(decimal64ToNumber): Likewise.
	* libdecnumber/decNumberLocal.h [DECUSE128]: Add define to use 128
	bits integers.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
