@@ -2,6 +2,7 @@
 
 	* ieee754r/islessgreaterd32.c (islessgreater): clean ups implementation
 	to use only libdecnumber operations.
+	* ieee754r/isgreaterd32.c (isgreater): Likewise.
 
 2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
